fix fedicomments background color in dark mode

--- a/themes/hyperopia/layouts/partials/dark.css
+++ b/themes/hyperopia/layouts/partials/dark.css
@@ -4,6 +4,8 @@
 
 --note-bg-color: #333;
 
+--comments-bg-color: #333;
+
 --menu-color: #eee;
 --menu-bg-color: #111;
 
