--- a/themes/hyperopia/static/css/light.css
+++ b/themes/hyperopia/static/css/light.css
@@ -5,6 +5,8 @@
 
     --note-bg-color: #eee;
 
+    --comments-bg-color: #f5f5f5;
+
     --foot-color: #333;
 
     --menu-color: #333;
